--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "framer-motion": "^12.23.0",
     "next": "15.3.1",
-    "next-intl": "^3.4.0"
+    "next-intl": "^3.4.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3",
     "postcss": "^8",
-    "autoprefixer": "^10"
+    "typescript": "^5"
   }
 }
