--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "next": "15.3.1",
     "next-intl": "^3.4.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
